--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary: #176bff;
+    --color-secondary: rgb(111 114 185);
+  }
+}
